# lotka-volterra

./: .gitignore  README.md  pyproject.toml
src/lotka_volterra/: __init__.py  jax_model.py  model.py
src/lotka_volterra/scripts/: config.yaml  default_config.yaml  default_config_jax.yaml  fit_params.py  generate_data.py  run.py  run_jax.py  wrong_params.yaml
